ALL CSS: rename background colors for better theming compatibility

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,7 +16,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: $blueBlack;
+  background-color: $bgDark;
 }
 
 code {
