--- a/src/styles/ui/PlayerList.scss
+++ b/src/styles/ui/PlayerList.scss
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background-color: $blueMediumGray;
+  background-color: $bgLight;
   box-shadow: $dropShadow;
   margin-bottom: 0.6em;
   padding: 0.6em 0.9em 0.6em 0.6em;
