--- a/src/styles/ui/end/Scoreboard.scss
+++ b/src/styles/ui/end/Scoreboard.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $blueMediumGray;
+  background-color: $bgLight;
   box-shadow: $dropShadow;
   margin-bottom: 0.6em;
   margin-right: 0.4em;
@@ -47,7 +47,7 @@
   margin-right: 0.5em;
   border-radius: 50%;
   box-shadow: $dropShadow;
-  background-color: $blueMediumGray;
+  background-color: $bgLight;
   font-weight: 500;
   display: flex;
   justify-content: center;
