--- a/src/styles/ui/events/MexicanStandoffAnimation.scss
+++ b/src/styles/ui/events/MexicanStandoffAnimation.scss
@@ -30,7 +30,7 @@
     height: 3em;
     width: 3em;
     opacity: 0;
-    fill: $blueLightGray;
+    fill: $bgLighter;
     transform: translateX(10em) translateY(-3em);
     animation-name: hole-appear;
     animation-duration: 0.001s;
