--- a/src/styles/ui/ingame/OpponentHand.scss
+++ b/src/styles/ui/ingame/OpponentHand.scss
@@ -101,7 +101,7 @@ $infoSize: 10em;
   flex-grow: 1;
   max-width: 10em;
   width: 10em;
-  background-color: $blueGray;
+  background-color: $bgMedium;
   border-radius: 0.3em;
   box-shadow: $dropShadow;
   pointer-events: all;
@@ -132,7 +132,7 @@ $infoSize: 10em;
   box-sizing: border-box;
   border-radius: 0.3em 0.3em 0 0;
   background-color: $accent;
-  color: $blueGray;
+  color: $bgMedium;
   font-weight: 600;
   text-align: center;
   word-break: break-all;
