--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,16 +1,24 @@
 /* Theme Colors */
 :root {
   --terracotta: #E0745C;
-  --primary-color: var(--terracotta);
+  --blue-black: #333840;
+  --blue-gray: #484D59;
+  --blue-medium-gray: #5B6171;
+  --blue-light-gray: #676E80;
+
+  --accent-color: var(--terracotta);
+  --bg-dark: var(--blue-black);
+  --bg-medium: var(--blue-gray);
+  --bg-light: var(--blue-medium-gray);
+  --bg-lighter: var(--blue-light-gray);
 }
 
-$accent: var(--primary-color);
-$blueBlack: #333840;
-$blueGray: #484D59;
-$blueMediumGray: #5B6171;
-$blueLightGray: #676E80;
+$accent: var(--accent-color);
+$bgDark: var(--bg-dark);
+$bgMedium: var(--bg-medium);
+$bgLight: var(--bg-light);
+$bgLighter: var(--bg-lighter);
 
-//$availableCardColor: #5dde5d;
 $availableCardColor: #43de43;
 
 /* Font stuff */
@@ -72,7 +80,7 @@ $dropShadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 0.18rem;
-    background-color: $blueMediumGray;
+    background-color: $bgLight;
   }
 }
 
