--- a/src/styles/ui/ErrorBox.scss
+++ b/src/styles/ui/ErrorBox.scss
@@ -5,7 +5,7 @@
 }
 
 .error-box {
-  color: $blueGray;
+  color: $bgMedium;
   background-color: $accent;
   display: flex;
   justify-content: space-between;
@@ -36,7 +36,7 @@
   @include scrollbar;
 
   &::-webkit-scrollbar-thumb {
-    background-color: $blueGray;
+    background-color: $bgMedium;
   }
 }
 
@@ -53,7 +53,7 @@
 .error-content code {
   float: left;
   box-sizing: border-box;
-  background-color: $blueGray;
+  background-color: $bgMedium;
   color: $accent;
   border-radius: 0.3em;
   padding: 0.3em;
