--- a/src/styles/ui/LobbyList.scss
+++ b/src/styles/ui/LobbyList.scss
@@ -41,7 +41,7 @@
 .lobby-item {
   display: flex;
   align-items: center;
-  background-color: $blueMediumGray;
+  background-color: $bgLight;
   border-radius: 0.3em;
   box-shadow: $dropShadow;
   padding: 0 1.2em;
