--- a/src/styles/ui/events/FridayThe13thAnimation.scss
+++ b/src/styles/ui/events/FridayThe13thAnimation.scss
@@ -37,7 +37,7 @@
   & .window {
     width: 3.2em;
     height: 3.2em;
-    background: $blueBlack;
+    background: $bgDark;
     position: absolute;
     animation: tv-flickering 1.8s infinite;
 
