--- a/src/styles/ui/help/CardHelp.scss
+++ b/src/styles/ui/help/CardHelp.scss
@@ -5,7 +5,7 @@
   display: flex;
   padding: 1em;
   box-sizing: border-box;
-  background-color: $blueMediumGray;
+  background-color: $bgLight;
   border-radius: 0.3em;
   margin-bottom: 2em;
   box-shadow: $dropShadow;
