--- a/src/styles/ui/events/CharityAnimation.scss
+++ b/src/styles/ui/events/CharityAnimation.scss
@@ -23,7 +23,7 @@
     width: 12em;
     height: 7em;
     background-color: $accent;
-    filter: brightness(80%);
+    filter: brightness(0.8);
   }
 
   & .charity-logo {
@@ -31,8 +31,7 @@
     height: 3em;
     z-index: 3;
     position: absolute;
-    fill: $accent;
-    filter: brightness(50%);
+    fill: $bgDark;
     transform: translateX(4.55em) translateY(-5em);
   }
 
@@ -43,7 +42,7 @@
     width: 13em;
     height: 1.4em;
     background-color: $accent;
-    filter: brightness(90%);
+    filter: brightness(0.9);
   }
 
   & .top-side-shadow1 {
@@ -63,7 +62,7 @@
     width: 12em;
     height: 0.18em;
     background-color: $black;
-    opacity: 50%;
+    opacity: 0.5;
   }
 
   & .top-front {
@@ -74,7 +73,7 @@
     border-left: 1.1em solid transparent;
     border-right: 1.1em solid transparent;
     width: 10.8em;
-    filter: brightness(100%);
+    filter: brightness(1);
   }
 
   & .opening{
@@ -84,7 +83,7 @@
     width: 3em;
     height: 0.1em;
     background-color: $black;
-    opacity: 100%;
+    opacity: 1;
   }
 }
 
@@ -96,7 +95,7 @@
   border-left: 1.1em solid transparent;
   border-right: 1.1em solid transparent;
   width: 8.7em;
-  filter: brightness(100%);
+  filter: brightness(1);
   animation-name: appear, disappear;
   animation-duration: 1.5s, 1s;
   animation-delay: 0s, 4.5s;
@@ -107,7 +106,7 @@
 .charity-coin {
   z-index: 2;
   position: absolute;
-  transform: translateX(-5.5em) translateY(-3em);
+  transform: translateX(-5.5em);
   opacity: 0;
   animation-name: charity-coin-animation;
   animation-duration: 1s;
@@ -130,8 +129,9 @@
     width: 2em;
     height: 2em;
     border-radius: 50%;
-    background-color: #dbb52a;
-    opacity: 100%;
+    background-color: $bgLighter;
+    filter: brightness(3);
+    opacity: 1;
   }
 
   & .inner-coin {
@@ -141,8 +141,8 @@
     width: 1.4em;
     height: 1.4em;
     border-radius: 50%;
-    background-color: $black;
-    opacity: 20%;
+    background-color: $bgDark;
+    opacity: 0.2;
   }
 }
 
@@ -152,7 +152,6 @@
   z-index: 6;
   position: absolute;
   fill: $accent;
-  filter: brightness(50%);
   opacity: 0;
   transform: translateX(0.05em) translateY(1.6em);
   animation-name: big-charity-logo-expand;
@@ -165,13 +164,13 @@
     opacity: 0;
   }
   100% {
-    opacity: 100%;
+    opacity: 1;
   }
 }
 
 @keyframes charity-box-disappear {
   0% {
-    opacity: 100%;
+    opacity: 1;
   }
   100% {
     opacity: 0;
@@ -183,13 +182,13 @@
     opacity: 0;
   }
   100% {
-    opacity: 100%;
+    opacity: 1;
   }
 }
 
 @keyframes disappear {
   0% {
-    opacity: 100%;
+    opacity: 1;
   }
   100% {
     opacity: 0;
@@ -201,11 +200,15 @@
     opacity: 0;
   }
   10% {
-    opacity: 100;
-    transform: translateX(-5.5em) translateY(-3em);
+    opacity: 1;
+    transform: translateX(-5.5em);
+  }
+  20% {
+    opacity: 1;
+    transform: translateX(-5.5em) translateY(-0.5em);
   }
   90% {
-    opacity: 100;
+    opacity: 1;
     transform: translateX(-5.5em) translateY(10em);
   }
   100% {
@@ -220,44 +223,44 @@
   }
   10% {
     transform: translateY(0em);
-    opacity: 100%;
-    filter: brightness(100%);
+    opacity: 1;
+    filter: brightness(1);
     width: 15em;
     height: 15em;
   }
-  20% {
+  18% {
     transform: translateY(0em);
-    opacity: 100%;
-    filter: brightness(100%);
+    opacity: 1;
+    filter: brightness(1);
     width: 10em;
     height: 10em;
   }
-  30% {
+  24% {
     transform: translateY(0em);
-    opacity: 100%;
-    filter: brightness(100%);
+    opacity: 1;
+    filter: brightness(1);
     width: 13em;
     height: 13em;
   }
-  40% {
+  28% {
     transform: translateY(0em);
-    opacity: 100%;
-    filter: brightness(100%);
+    opacity: 1;
+    filter: brightness(1);
     width: 12em;
     height: 12em;
   }
-  50% {
+  30% {
     transform: translateY(0em);
-    opacity: 100%;
-    filter: brightness(100%);
+    opacity: 1;
+    filter: brightness(1);
     width: 12.5em;
     height: 12.5em;
   }
   100% {
     transform: translateY(0em);
-    width: 10em;
-    filter: brightness(100%);
-    height: 10em;
-    opacity: 0;
+    opacity: 1;
+    filter: brightness(1);
+    width: 12.5em;
+    height: 12.5em;
   }
 }
