--- a/src/styles/ui/pickers/ThemePicker.scss
+++ b/src/styles/ui/pickers/ThemePicker.scss
@@ -3,8 +3,32 @@
 .themepicker-container {
   width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.themepicker-item {
+  position: relative;
+  display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  margin: 0.5em 0.5em 0;
+  padding: 0.5em;
+  @include clickable;
+  width: 6em;
+
+  &.active {
+    font-weight: 500;
+    color: $accent;
+
+    & > .themepicker-theme {
+      border: 0.1em solid $accent;
+      box-shadow: 0 0 0.5em $accent;
+    }
+  }
 }
 
 .themepicker-theme {
