--- a/src/styles/ui/Chat.scss
+++ b/src/styles/ui/Chat.scss
@@ -40,7 +40,7 @@ $inputHeight: 1.9em;
   background-color: transparent;
   height: $inputHeight;
   width: 100%;
-  color: white;
+  color: $textColor;
   font-family: $themeFont;
   font-weight: 300;
   font-size: $fontSizeInput;
