--- a/src/styles/ui/ToolWindow.scss
+++ b/src/styles/ui/ToolWindow.scss
@@ -2,7 +2,7 @@
 
 .toolwindow-container {
   position: relative;
-  color: white;
+  color: $textColor;
   background-color: $bgMedium;
   border-radius: 0.6em;
   overflow: hidden;
