--- a/src/styles/ui/ingame/OpponentHand.scss
+++ b/src/styles/ui/ingame/OpponentHand.scss
@@ -140,7 +140,7 @@ $infoSize: 10em;
 }
 
 .opponent-stats {
-  color: white;
+  color: $textColor;
   width: 100%;
   padding: 0.5em 1em;
   box-sizing: border-box;
