--- a/src/styles/ui/ingame/ChatLogBox.scss
+++ b/src/styles/ui/ingame/ChatLogBox.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white;
+  color: $textColor;
   background-color: $bgMedium;
   border-radius: 0.3em 0.3em 0 0;
   box-shadow: $dropShadow;
