--- a/src/styles/ui/ingame/OverlayMessage.scss
+++ b/src/styles/ui/ingame/OverlayMessage.scss
@@ -18,7 +18,7 @@
 .event-overlay-content {
   position: relative;
   width: 100%;
-  height: 200%;
+  height: 100vh;
   @include center;
   animation-name: overlay-fade;
   animation-duration: 0.5s;
