Chat: only break whole words, escape name regex

--- a/src/styles/ui/Chat.scss
+++ b/src/styles/ui/Chat.scss
@@ -95,7 +95,7 @@ $chatItemSize: $fontSizeChat;
 .chat-item-text {
   margin: 0;
   line-height: $chatItemSize;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .chat-username-highlight {
