--- a/src/styles/ui/events/CharityAnimation.scss
+++ b/src/styles/ui/events/CharityAnimation.scss
@@ -12,8 +12,8 @@
   align-self: flex-end;
   opacity: 0;
   animation-name: charity-box-appear, charity-box-disappear;
-  animation-duration: 1.5s, 1s;
-  animation-delay: 0s, 4.5s;
+  animation-duration: 1s, 1s;
+  animation-delay: 0s, 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 
@@ -97,8 +97,8 @@
   width: 8.7em;
   filter: brightness(1);
   animation-name: appear, disappear;
-  animation-duration: 1.5s, 1s;
-  animation-delay: 0s, 4.5s;
+  animation-duration: 1s, 1s;
+  animation-delay: 0s, 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
@@ -110,15 +110,15 @@
   opacity: 0;
   animation-name: charity-coin-animation;
   animation-duration: 1s;
-  animation-delay: 1s;
+  animation-delay: 0.5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 
   $animationDelay: 0.7s;
 
-  @for $i from 1 through 4 {
+  @for $i from 1 through 3 {
     &:nth-of-type(#{$i}) {
-      animation-delay: $animationDelay * $i + 0.5s;
+      animation-delay: $animationDelay * $i;
     }
   }
 
@@ -156,7 +156,7 @@
   transform: translateX(0.05em) translateY(1.6em);
   animation-name: big-charity-logo-expand;
   animation-duration: 2s;
-  animation-delay: 4.6s;
+  animation-delay: 3.1s;
 }
 
 @keyframes charity-box-appear {
