ExpansionAnimation: Animation done

--- a/src/styles/ui/events/ExpansionAnimation.scss
+++ b/src/styles/ui/events/ExpansionAnimation.scss
@@ -7,6 +7,7 @@
 
 
   & .grid {
+    position: absolute;
     /*background: linear-gradient(to bottom,
             transparent 45%, $terracotta 45%,
             $terracotta 55%, transparent 55%),
@@ -28,9 +29,23 @@
   }
 
   & .arrow {
-    position: relative;
+    position: absolute;
+    right: -10em;
     @include center;
     flex-direction: row;
+
+
+    & .hide-box {
+      position: absolute;
+      width: 20em;
+      height: 14em;
+      background: $black;
+      left: -20em;
+      animation: reveal-arrow 2s forwards;
+      animation-delay: 1.5s;
+      animation-timing-function: linear;
+
+    }
 
     & .arrow-1st {
       position: absolute;
@@ -87,5 +102,11 @@
       bottom: 2.3em;
 
     }
+  }
+}
+
+@keyframes reveal-arrow {
+  100% {
+    left: -4.5em;
   }
 }
