Pickers: add max height and scrollbar for when too many cards are available

--- a/src/styles/ui/pickers/BasicPickers.scss
+++ b/src/styles/ui/pickers/BasicPickers.scss
@@ -5,6 +5,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  max-height: 40vh;
+  overflow-y: auto;
+  @include scrollbar;
 }
 
 .picker-item {
