Card: add new "accent" color option for animations

--- a/src/styles/ui/cards/Card.scss
+++ b/src/styles/ui/cards/Card.scss
@@ -38,6 +38,10 @@
     color: $black;
   }
 
+  &.accent > .ribbon {
+    color: $accent;
+  }
+
   &.white > .ribbon {
     color: $white;
     background-color: $black;
