--- a/src/styles/ui/cards/_colors.scss
+++ b/src/styles/ui/cards/_colors.scss
@@ -30,6 +30,10 @@ $white: invert($black);
   background-color: $white;
 }
 
+.accent {
+  background-color: $accent;
+}
+
 .special {
   transition: 0.5s;
 
