--- a/src/styles/ui/events/CommunismAnimation.scss
+++ b/src/styles/ui/events/CommunismAnimation.scss
@@ -42,9 +42,8 @@
     font-weight: 500;
     text-shadow: 0 0 0.2em currentColor;
     transform: translate(-1.5em, -1.5em);
-    animation:
-            communism-idea 0.5s 0.5s forwards,
-            communism-idea-out 0.5s 1.5s forwards;
+    animation: communism-idea 0.5s 0.5s forwards,
+    communism-idea-out 0.5s 1.5s forwards;
     opacity: 0;
   }
 
