--- a/src/styles/ui/events/CommunismAnimation.scss
+++ b/src/styles/ui/events/CommunismAnimation.scss
@@ -2,28 +2,11 @@
 @import 'ui/cards/colors';
 
 .communism-animation {
+  position: relative;
+
   .communism-card {
     font-size: 0.8em;
-    transition: transform 1s;
     transform-style: preserve-3d;
-    @include center;
-    animation: communism-card-flip 1s 2s forwards;
-
-    &:hover {
-      transform: rotateY(180deg);
-    }
-
-    & .card-face {
-      position: absolute;
-
-      &.front {
-        z-index: 2;
-      }
-
-      &.back {
-        transform: rotateY(180deg);
-      }
-    }
   }
 
   & .hat {
@@ -31,20 +14,13 @@
     height: 3em;
     fill: white;
     filter: drop-shadow($dropShadow);
-    transform: translate(0, -16em) rotate(25deg);
-    animation: communism-hat-drop 1s 2.5s forwards;
-    z-index: 5;
+    transform: translate(1em, -12em);
+    z-index: 3;
   }
 
-  & .exclamation {
-    position: absolute;
-    font-size: 5em;
-    font-weight: 500;
-    text-shadow: 0 0 0.2em currentColor;
-    transform: translate(-1.5em, -1.5em);
-    animation: communism-idea 0.5s 0.5s forwards,
-    communism-idea-out 0.5s 1.5s forwards;
-    opacity: 0;
+  & .dear-leader {
+    transform-style: preserve-3d;
+    transform: rotateY(40deg) rotateX(10deg);
   }
 
   & .fist {
@@ -52,16 +28,16 @@
     width: 2.5em;
     height: 2.5em;
     fill: white;
-    transform: translate(-7em, -2em) scale(-1, 1);
+    transform: translate(7em, -2em);
     opacity: 0;
-    animation: communism-fist-raise 2s 3.5s forwards;
+    animation: communism-fist-raise 2s 1s forwards;
   }
 
   & .communism-logo {
     position: absolute;
-    transform: translate(12em, -5em);
+    transform: translate(15em, -10em);
     @include center;
-    animation: communism-logo-fade 1s 4s forwards;
+    animation: communism-logo-fade 1s 1s forwards;
     opacity: 0;
 
     & .rays {
@@ -85,56 +61,70 @@
   }
 }
 
-@keyframes communism-idea {
-  0% {
-    opacity: 0;
-    transform: translate(-1.5em, -1.5em) scale(0.8);
+.communism-flow-container {
+  transform-style: preserve-3d;
+  transform: translate(-10em, -2em) rotate(-10deg) rotate3d(-1, -1, -1, 40deg);
+}
+
+.communism-flow {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  top: -45em;
+  left: -10em;
+  animation: communism-flow 3s linear infinite;
+
+  & .part {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 0.5rem;
+    width: 30em;
+  }
+
+  & .soldier {
+    position: relative;
+    overflow: visible;
+    margin: 1em;
+
+    & .soldier-fist {
+      position: absolute;
+      fill: white;
+      height: 3em;
+      top: 2em;
+      right: -1em;
+      animation: cm-soldier-fist 1s infinite;
+      z-index: 2;
+    }
+  }
+}
+
+@keyframes cm-soldier-fist {
+  0%, 100% {
+    transform: rotate(30deg) translateY(0);
   }
   50% {
-    opacity: 1;
-    transform: translate(-1.5em, -1.5em) scale(1.2);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(-1.5em, -1.5em) scale(1);
+    transform: rotate(30deg) translateY(-3em);
   }
 }
 
-@keyframes communism-idea-out {
+@keyframes communism-flow {
   0% {
-    opacity: 1;
+    transform: translateY(0);
   }
   100% {
-    opacity: 0;
-  }
-}
-
-@keyframes communism-card-flip {
-  0% {
-    transform: rotateY(0deg);
-  }
-  100% {
-    transform: rotateY(180deg);
-  }
-}
-
-@keyframes communism-hat-drop {
-  0% {
-    transform: translate(0, -16em) rotate(-325deg);
-  }
-  100% {
-    transform: translate(0, -6em) rotate(25deg);
+    transform: translateY(50%);
   }
 }
 
 @keyframes communism-fist-raise {
   0% {
     opacity: 0;
-    transform: translate(-7em, -2em) scale(-1, 1);
+    transform: translate(-5em, -9em) scale(-1, 1);
   }
   100% {
     opacity: 1;
-    transform: translate(-7em, -5em) scale(-1, 1);
+    transform: translate(-5em, -11em) scale(-1, 1);
   }
 }
 
@@ -146,7 +136,6 @@
     transform: rotate(360deg);
   }
 }
-
 
 @keyframes communism-logo-fade {
   0% {
