--- a/src/styles/ui/events/SurprisePartyAnimation.scss
+++ b/src/styles/ui/events/SurprisePartyAnimation.scss
@@ -21,7 +21,7 @@
     height: 6em;
     transform: skewY(20deg) rotate(90deg) translateY(3em);
     background-color: $accent;
-    filter: brightness(90%);
+    filter: brightness(0.9);
   }
   .right {
     position: absolute;
@@ -29,7 +29,7 @@
     height: 6em;
     transform: skewY(-20deg) rotate(90deg) translateY(-3em);
     background-color: $accent;
-    filter: brightness(90%);
+    filter: brightness(0.9);
   }
   .left-shadow {
     position: absolute;
@@ -53,7 +53,7 @@
     height: 6.25em;
     transform: skewY(20deg) rotate(90deg) translateY(0.75em) translateX(-3.4em);
     background-color: $accent;
-    filter: brightness(95%);
+    filter: brightness(0.95);
   }
   .right-cover {
     position: absolute;
@@ -61,7 +61,7 @@
     height: 6.25em;
     transform: skewY(-20deg) rotate(90deg) translateY(-5.5em) translateX(-1.7em);
     background-color: $accent;
-    filter: brightness(95%);
+    filter: brightness(0.95);
   }
   .top-cover{
     position: absolute;
