--- a/src/styles/ui/events/SurprisePartyAnimation.scss
+++ b/src/styles/ui/events/SurprisePartyAnimation.scss
@@ -9,10 +9,11 @@
 
 .present {
   position: absolute;
-  animation-name: surprise-party-appear, surprise-party-short-shake, surprise-party-shake, surprise-party-shrink;
+  transform: translateX(-2em);
+  animation-name: surprise-party-appear, surprise-party-short-shake, surprise-party-shake, surprise-party-disappear;
   animation-delay: 0s, 1s, 2s, 3s;
   animation-duration: 1.5s, 0.25s, 0.5s, 0.25s;
-  animation-iteration-count: 1, 1, infinite, 1;
+  animation-iteration-count: 1, 1, 3, 1;
   animation-fill-mode: forwards;
 
   .left {
@@ -23,6 +24,7 @@
     background-color: $accent;
     filter: brightness(0.9);
   }
+
   .right {
     position: absolute;
     width: 6em;
@@ -31,6 +33,7 @@
     background-color: $accent;
     filter: brightness(0.9);
   }
+
   .left-shadow {
     position: absolute;
     width: 6.5em;
@@ -39,6 +42,7 @@
     filter: blur(0.1em);
     background-color: $black;
   }
+
   .right-shadow {
     position: absolute;
     width: 6.5em;
@@ -47,45 +51,66 @@
     filter: blur(0.1em);
     background-color: $black;
   }
-  .left-cover {
+
+  .cover {
     position: absolute;
-    width: 1.3em;
-    height: 6.25em;
-    transform: skewY(20deg) rotate(90deg) translateY(0.75em) translateX(-3.4em);
-    background-color: $accent;
-    filter: brightness(0.95);
-  }
-  .right-cover {
-    position: absolute;
-    width: 1.3em;
-    height: 6.25em;
-    transform: skewY(-20deg) rotate(90deg) translateY(-5.5em) translateX(-1.7em);
-    background-color: $accent;
-    filter: brightness(0.95);
-  }
-  .top-cover{
-    position: absolute;
-    transform: rotate(90deg) translateX(-6.6em) translateY(-2.8em);
-    .top-cover1 {
-      width: 0;
-      height: 0;
-      border: 2.25em solid transparent;
-      border-bottom: 6.3em solid $accent;
-      position: relative;
-      top: -2.25em;
-    }
-    .top-cover1:after {
-      content: '';
+    animation-name: cover-opens;
+    animation-delay: 3s;
+    animation-duration: 0.25s;
+    animation-fill-mode: forwards;
+
+    .left-cover {
       position: absolute;
-      left: -2.25em;
-      top: 6.3em;
-      width: 0;
-      height: 0;
-      border: 2.25em solid transparent;
-      border-top: 6.3em solid $accent;
+      width: 1.3em;
+      height: 6.25em;
+      transform: skewY(20deg) rotate(90deg) translateY(0.75em) translateX(-3.4em);
+      background-color: $accent;
+      filter: brightness(0.95);
     }
+
+    .right-cover {
+      position: absolute;
+      width: 1.3em;
+      height: 6.25em;
+      transform: skewY(-20deg) rotate(90deg) translateY(-5.5em) translateX(-1.7em);
+      background-color: $accent;
+      filter: brightness(0.95);
+    }
+
+    .top-cover{
+      position: absolute;
+      transform: rotate(90deg) translateX(-6.6em) translateY(-2.8em);
+
+      .top-cover1 {
+        width: 0;
+        height: 0;
+        border: 2.25em solid transparent;
+        border-bottom: 6.3em solid $accent;
+        position: relative;
+        top: -2.25em;
+      }
+
+      .top-cover1:after {
+        content: '';
+        position: absolute;
+        left: -2.25em;
+        top: 6.3em;
+        width: 0;
+        height: 0;
+        border: 2.25em solid transparent;
+        border-top: 6.3em solid $accent;
+      }
+
+    }
+
   }
+
   .present-ribbon {
+    animation-name: ribbon-disappear;
+    animation-delay: 2.8s;
+    animation-duration: 0.25s;
+    animation-fill-mode: forwards;
+
     .left-ribbon {
       position: absolute;
       width: 6em;
@@ -93,6 +118,7 @@
       transform: skewY(20deg) rotate(90deg) translateY(3.3em) translateX(2.5em);
       background-color: $bgLight;
     }
+
     .right-ribbon {
       position: absolute;
       width: 6em;
@@ -100,6 +126,7 @@
       transform: skewY(-20deg) rotate(90deg) translateY(-3.3em) translateX(2.5em);
       background-color: $bgLight;
     }
+
     .top-left-ribbon {
       position: absolute;
       width: 6.75em;
@@ -107,6 +134,7 @@
       transform: rotate(-20deg) translateY(-2.72em) translateX(0.43em) skew(50deg);
       background-color: $bgLight;
     }
+
     .top-right-ribbon {
       position: absolute;
       width: 6.75em;
@@ -114,20 +142,25 @@
       transform: rotate(20deg) translateY(-2.45em) translateX(-1.15em) skew(-50deg);
       background-color: $bgLight;
     }
+
     .top-ribbon {
+
       .rounded-triangle1 {
         transform: rotate(10deg) translateY(-4.5em) translateX(0.2em);
+
         .triangle {
           position: relative;
           background-color: $bgLighter;
           text-align: left;
         }
+
         .triangle:before,
         .triangle:after {
           content: '';
           position: absolute;
           background-color: inherit;
         }
+
         .triangle,
         .triangle:before,
         .triangle:after {
@@ -139,27 +172,33 @@
         .triangle {
           transform: rotate(-60deg) skewX(-30deg) scale(1,.866);
         }
+
         .triangle:before {
           transform: rotate(-135deg) skewX(-45deg) scale(1.414,.707) translate(0,-50%);
         }
+
         .triangle:after {
           transform: rotate(135deg) skewY(-45deg) scale(.707,1.414) translate(50%);
         }
+
       }
 
       .rounded-triangle2 {
         transform: rotate(150deg) translateY(2em) translateX(-5em);
+
         .triangle {
           position: relative;
           background-color: $bgLighter;
           text-align: left;
         }
+
         .triangle:before,
         .triangle:after {
           content: '';
           position: absolute;
           background-color: inherit;
         }
+
         .triangle,
         .triangle:before,
         .triangle:after {
@@ -171,9 +210,11 @@
         .triangle {
           transform: rotate(-60deg) skewX(-30deg) scale(1,.866);
         }
+
         .triangle:before {
           transform: rotate(-135deg) skewX(-45deg) scale(1.414,.707) translate(0,-50%);
         }
+
         .triangle:after {
           transform: rotate(135deg) skewY(-45deg) scale(.707,1.414) translate(50%);
         }
@@ -187,8 +228,11 @@
         border-radius: 50%;
         background-color: $bgLight;
       }
+
     }
+
   }
+
 }
 
 .surprise-text {
@@ -314,61 +358,79 @@
 
 @keyframes surprise-party-short-shake {
   0% {
-    transform: translate(0.1em, 0.05em) rotate(0deg);
+    transform: translate(-1.9em, 0.05em) rotate(0deg);
   }
   50% {
-    transform: translate(-0.05em, 0.1em) rotate(-1deg);
+    transform: translate(-2.05em, 0.1em) rotate(-1deg);
   }
   100% {
-    transform: translate(0.05em, -0.1em) rotate(-1deg);
+    transform: translate(-1.95em, -0.1em) rotate(-1deg);
   }
 }
 
 @keyframes surprise-party-shake {
   0% {
-    transform: translate(0.1em, 0.05em) rotate(0deg);
+    transform: translate(-1.9em, 0.05em) rotate(0deg);
   }
   10% {
-    transform: translate(-0.05em, -0.1em) rotate(-1deg);
+    transform: translate(-2.05em, -0.1em) rotate(-1deg);
   }
   20% {
-    transform: translate(-0.15em, 0) rotate(1deg);
+    transform: translate(-2.15em, 0) rotate(1deg);
   }
   30% {
-    transform: translate(0, 0.1em) rotate(0deg);
+    transform: translate(-2, 0.1em) rotate(0deg);
   }
   40% {
-    transform: translate(0.05em, -0.05em) rotate(1deg);
+    transform: translate(-1.95em, -0.05em) rotate(1deg);
   }
   50% {
-    transform: translate(-0.05em, 0.1em) rotate(-1deg);
+    transform: translate(-2.05em, 0.1em) rotate(-1deg);
   }
   60% {
-    transform: translate(-0.15em, 0.05em) rotate(0deg);
+    transform: translate(-2.15em, 0.05em) rotate(0deg);
   }
   70% {
-    transform: translate(0.1em, 0.05em) rotate(-1deg);
+    transform: translate(-1.9em, 0.05em) rotate(-1deg);
   }
   80% {
-    transform: translate(-0.05em, -0.05em) rotate(1deg);
+    transform: translate(-2.05em, -0.05em) rotate(1deg);
   }
   90% {
-    transform: translate(0.1em, 0.1em) rotate(0deg);
+    transform: translate(-1.9em, 0.1em) rotate(0deg);
   }
   100% {
-    transform: translate(0.05em, -0.1em) rotate(-1deg);
+    transform: translate(-1.95em, -0.1em) rotate(-1deg);
   }
 }
 
-@keyframes surprise-party-shrink {
+@keyframes surprise-party-disappear {
   0% {
-    width: 5em;
-    height: 5em;
+    opacity: 1;
+    transform: translateX(-2em) translateY(0em);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-2em) translateY(6em);
+  }
+}
+
+@keyframes cover-opens {
+  0% {
+    opacity: 1;
+    transform: translateY(0em);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-12em);
+  }
+}
+
+@keyframes ribbon-disappear {
+  0% {
     opacity: 1;
   }
   100% {
-    width: 0;
-    height: 0;
     opacity: 0;
   }
 }
