GameView, EndView, EndWindow: add support for new packet fields

--- a/src/styles/ui/end/EndWindow.scss
+++ b/src/styles/ui/end/EndWindow.scss
@@ -1,7 +1,18 @@
 @import 'theme';
 
+.end-text-container {
+  display: flex;
+}
+
 .end-p {
   margin: 0 0 0.5em;
+}
+
+.end-icon {
+  fill: $accent;
+  height: 2em;
+  width: 2em;
+  margin-right: 1em;
 }
 
 .end-scoreboard-container {
