Scoreboard: fixed ranking algorithm, now supports colored numbers for points added last round

--- a/src/styles/ui/end/Scoreboard.scss
+++ b/src/styles/ui/end/Scoreboard.scss
@@ -64,6 +64,47 @@
   font-weight: 500;
 }
 
+.change-text-over-50 {
+  white-space: nowrap;
+  font-weight: 500;
+  color: #ff3d3d;
+}
+
+.change-text-over-30 {
+  white-space: nowrap;
+  margin-left: 0.3em;
+  font-weight: 500;
+  color: #ff6666;
+}
+
+.change-text-over-15 {
+  white-space: nowrap;
+  margin-left: 0.3em;
+  font-weight: 500;
+  color: #ff9494;
+}
+
+.change-text-over-0 {
+  white-space: nowrap;
+  margin-left: 0.3em;
+  font-weight: 500;
+  color: #ffbfbf;
+}
+
+.change-text-0 {
+  white-space: nowrap;
+  margin-left: 0.3em;
+  font-weight: 500;
+  color: #fcc603;
+}
+
+.change-text-under-0 {
+  white-space: nowrap;
+  margin-left: 0.3em;
+  font-weight: 500;
+  color: #85c771;
+}
+
 .podium-container {
   width: 100%;
   margin-right: 0.4em;
