--- a/src/styles/ui/events/GamblingManAnimation.scss
+++ b/src/styles/ui/events/GamblingManAnimation.scss
@@ -40,12 +40,11 @@
     & .slot-container {
       @include center;
       position: relative;
-      display: flex;
       flex-direction: column;
       flex-wrap: wrap;
       width: 30%;
       height: auto;
-      top: 21em;
+      top: 22em;
       animation: slot1 2s forwards;
 
       &:nth-child(1) {
@@ -60,8 +59,8 @@
 
       & .slot {
         fill: $accent;
-        margin: 0.3em;
-        height: auto;
+        margin: 0.5em 0;
+        height: 4.4em;
         width: 75%;
       }
     }
