--- a/src/styles/views/GameView.scss
+++ b/src/styles/views/GameView.scss
@@ -100,6 +100,14 @@
   left: 20vh;
 }
 
+.player-info-container {
+  position: absolute;
+  bottom: -4.2em;
+  left: -3em;
+  @include center;
+  filter: drop-shadow($dropShadow);
+}
+
 .game-chat-container {
   pointer-events: all;
   position: absolute;
