--- a/src/styles/views/AboutView.scss
+++ b/src/styles/views/AboutView.scss
@@ -36,6 +36,11 @@
       color: $accent;
       font-weight: 500;
     }
+
+    & > a {
+      color: $accent;
+      font-weight: 500;
+    }
   }
 }
 
