MainMenuItem: add secondary variant

--- a/src/styles/views/MainMenu.scss
+++ b/src/styles/views/MainMenu.scss
@@ -35,6 +35,12 @@
   text-transform: lowercase;
   text-shadow: $dropShadow;
   @include clickable;
+
+  &.secondary {
+    font-size: $fontSizeDefault * 1.5;
+    color: $textColor;
+    opacity: 70%;
+  }
 }
 
 .madewith {
