MainMenu: add copyright disclaimer, add about button

--- a/src/styles/ui/AppContainer.scss
+++ b/src/styles/ui/AppContainer.scss
@@ -42,7 +42,7 @@
   right: 1.5em;
 }
 
-.settings-button {
+.top-icon {
   fill: $accent;
   height: $fontSizeDefault * 1.25;
   width: $fontSizeDefault * 1.25;
