--- a/src/styles/views/MainMenu.scss
+++ b/src/styles/views/MainMenu.scss
@@ -48,10 +48,30 @@
   color: $accent;
   margin: 0;
   overflow: visible;
+  text-align: center;
 
   &.label {
     position: absolute;
     bottom: 0.5em;
+  }
+  &.link {
+    display: block;
+    position: relative;
+    @include clickable;
+  }
+}
+
+.copyright-disclaimer {
+  display: block;
+  position: relative;
+  color: $textColor;
+  line-height: 1em;
+  margin-top: 1em;
+
+  &.link {
+    display: inline-block;
+    color: $accent;
+    margin: 0;
     @include clickable;
   }
 }
