Fix workswith label opacity

--- a/src/styles/views/MainMenu.scss
+++ b/src/styles/views/MainMenu.scss
@@ -81,7 +81,7 @@
   font-size: $fontSizeSmallHeader;
   color: $textColor;
   text-transform: lowercase;
-  opacity: 50%;
+  opacity: 0.5;
 }
 
 @keyframes mainmenu-logo-spin {
